--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-name: "Blog Seguros"
-title: "Blog Seguros"
-description: "Nuevo blog sobre seguros en México"
+name: "Explica mi seguro"
+title: "¡Te explicamos tu seguro!"
+description: "El lugar donde por fin entenderás de seguros"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
