--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ authors:
   carlos:
     name: Carlos Muñiz
     display_name: Carlos Muñiz
-    avatar: 'assets/images/carlos.jpeg'
+    avatar: 'assets/images/AutorCAMA.jpg'
     gravatar: ''
     email: ''
     web: ''
     twitter: ''
-    description: 'Experto en materia de seguors y etc...'
+    description: 'Yo te explico tu seguro.'
   juan:
     name: Autor 2
     display_name: Autor2
