--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ authors:
     gravatar: ''
     email: 'CMuniz@GuiasAsesores.com'
     web: 'www.guiasasesores.com'
-    twitter: '@explicamiseguro'
+    twitter: 'https://twitter.com/explicamiseguro'
     facebook: 'Guiasasesores'
     description: 'Yo te explico tu seguro.'
   juan:
